* github activity stream -- no error handling * Sign up -- no error handling * Added a utils file for utils * And some simple style changes :P

--- a/c404WebProject/public/index.html
+++ b/c404WebProject/public/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap-theme.min.css">
+
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/octicons/2.0.2/octicons.min.css">
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/mustache.js/0.7.2/mustache.min.js"></script>
+
     <!-- <link rel="stylesheet" href="/stylesheets/main.scss"> -->
 </head>
 <body>
