Hosting static files

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/octicons/2.0.2/octicons.min.css">
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/mustache.js/0.7.2/mustache.min.js"></script>
 
-    <!-- <link rel="stylesheet" href="/stylesheets/main.scss"> -->
+    <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
     <div id="app"></div>
